--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>sn.isi.l3gl.core</groupId>
 	<artifactId>task-core</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1.0-SNAPSHOT</version>
 	<name>task-core</name>
 	<description>Projet task core</description>
 	<url/>
@@ -104,5 +104,12 @@
 			</releases>
 		</pluginRepository>
 	</pluginRepositories>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>nexus-snapshots</id>
+            <url>http://localhost:8081/repository/maven-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 
 </project>
